force-app/main/default/objects/ssot__RegulationClause__dlm/fields/ssot__CommentsText__c.field-meta.xml
<CustomField>
    <fullName>ssot__CommentsText__c</fullName>
    <label>Comments</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CommentsText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>