force-app/main/default/objects/ssot__RegulationClause__dlm/fields/ssot__ParentRegulationClauseId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ParentRegulationClauseId__c</fullName>
    <label>Parent Regulation Clause</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ParentRegulationClauseId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>