force-app/main/default/objects/ssot__RegulationClause__dlm/fields/ssot__ReferenceDocumentsLinkUrl__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReferenceDocumentsLinkUrl__c</fullName>
    <label>Reference Documents Link</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReferenceDocumentsLinkUrl</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>