force-app/main/default/objects/ssot__RegulationClause__dlm/fields/ssot__RegulationId__c.field-meta.xml
<CustomField>
    <fullName>ssot__RegulationId__c</fullName>
    <label>Regulation</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RegulationId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>