force-app/main/default/objects/ssot__RegulationClause__dlm/fields/ssot__rel_1731040561341_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731040561341_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RegulationClause_ParentRegulationCla_rel</label>
    <referenceTo>ssot__RegulationClause__dlm</referenceTo>
    <relationshipLabel>RegulationClause_ParentRegulationCla_rel</relationshipLabel>
    <relationshipName>rel_1731040561341_end</relationshipName>
    <type>Lookup</type>
</CustomField>