force-app/main/default/objects/ssot__RegulationClause__dlm/fields/ssot__rel_1731040577014_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731040577014_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RegulationClause_RegulationId_map_Re_rel</label>
    <referenceTo>ssot__Regulation__dlm</referenceTo>
    <relationshipLabel>RegulationClause_RegulationId_map_Re_rel</relationshipLabel>
    <relationshipName>rel_1731040577014_end</relationshipName>
    <type>Lookup</type>
</CustomField>